# hackathon-tt-py

./: .branch-test  .gitignore  BRANCH_A_ROADMAP.md  BRANCH_B_ROADMAP.md  CLAUDE.md  COMPETITION_RULES.md  Makefile  PRE_BRANCH_SETUP.md  PROGRAM.md  README.md  SOLUTION.md
.claude/: settings.json  settings.local.json
contracts/: codegen_interface.py  lib_map_interface.py  parse_tree_schema.py
dashboards/: DASHBOARDS.md
docs/: RESEARCH.md
helptools/: setup_arquero_scaffold_for_tt.py  (+1 more)
make/: arquero.mk  (+4 more)
tt/: pyproject.toml
tt/.hypothesis/constants/: ab01e7eecca38a2f  da39a3ee5e6b4b0d
tt/tests/: test_big_mapper.py  test_import_resolver.py  test_pipeline_properties.py  test_transformer.py
tt/tt/: __main__.py  big_mapper.py  cli.py  codegen.py  date_mapper.py  emitter.py  extractor.py  generator.py  import_resolver.py  inspector.py  ir.py  lib_map.py  node_translator.py  parser.py  transformer.py  transforms.py  translator.py  ts_parser.py
tt/tt/rewriters/: __init__.py  async_rewriter.py  body_rewriter.py  class_rewriter.py  constructor_rewriter.py  decorator_rewriter.py  enum_rewriter.py  import_rewriter.py
tt/tt/scaffold/ghostfolio_pytx/: tt_import_map.json  tt_project_config.json
tt/tt/scaffold/ghostfolio_pytx/app/helpers/: big.py  date_fns.py
tt/tt/scaffold/ghostfolio_pytx/app/implementation/helpers/: config.py  interfaces.py
tt/tt/scaffold/ghostfolio_pytx/app/implementation/shims/: collections.py  dates.py  numbers.py
tt/tt/transforms/: identifiers.py
tt_example/: README.md  pyproject.toml
tt_example/tt_example/: __main__.py  cli.py
(+153 files in other folders)
